MDL-85988 mod_book: Fix chapter content overlaps navigation buttons

--- a/mod/book/styles.css
+++ b/mod/book/styles.css
@@ -61,7 +61,7 @@
 }
 
 .path-mod-book .book_content {
-    margin: 0 5px;
+    margin: 0 15px;
     padding-right: 15px;
     padding-left: 15px;
     position: relative; /* Chapter navigation should not float on top of content. */
